--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,19 @@
-
-element{
-  --color1 : ; 
-  --color2 : ;
-  --color3 : ;
-  --color4 : ;
-  --color5 : ;
-
+*
+{
+    margin: 0;
+    padding: 0;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+html,
+body
+{
+    overflow: hidden;
 }
 
-html {
-  background: #000807;
-  font-family: "Bebas Neue", cursive;
-  scroll-behavior: smooth;
+.webgl
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
 }
-
